tests/neg/yimports-custom.check
-- [E006] Not Found Error: tests/neg/yimports-custom/C_2.scala:5:16 ----------------------------------------------------
5 |  def greet() = println("hello, world!") // error
  |                ^^^^^^^
  |                Not found: println
  |
  | longer explanation available when compiling with `-explain`
